<resources>
    <string name="app_name">TokTok</string>
    <string name="new_message">Add friends to conversation</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for your friends</string>

    <!-- Home -->
    <string name="home_tabs_chats">Chats</string>
    <string name="home_tabs_friends">Friends</string>
    <string name="home_search">Search for something</string>

    <!-- Drawer -->
    <string name="drawer_chats">Chats</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>

    <string name="drawer_connection_connecting">Connecting…</string>
    <string name="drawer_connection_connected">Connected</string>
    <string name="drawer_connection_not_available">Unavailable</string>

    <!-- Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_add_friend">Add Friend</string>

    <!-- Contacts -->
    <string name="contact_voice_call">Voice call</string>
    <string name="contact_video_call">Video call</string>
    <string name="contact_message">Message</string>
    <string name="contact_save_photo">Save profile photo</string>
    <string name="contact_files">Files sent by</string>
    <string name="contact_block">Block friend</string>
    <string name="contact_delete">Delete friend</string>
    <string name="contact_settings">Friend settings</string>
    <string name="contact_choose_color">Choose friend color</string>
    <string name="contact_edit_alias">Edit friend alias</string>
    <string name="contact_popup_edit_contact_color">Edit friend color</string>
    <string name="contact_popup_edit_alias">Edit alias</string>
    <string name="contact_popup_delete_friend">Delete friend?</string>
    <string name="contact_save_photo_snack_bar">Profile photo saved</string>
    <string name="contact_blocked">Friend blocked</string>

    <!-- New Message -->
    <string name="new_message_selected_friends">selected friends</string>
    <string name="new_message_title">Add friends to conversation</string>
    <string name="new_message_attachments">Add to the conversation</string>

    <!-- Message -->

    <string name="message_hint_group">Message group</string>
    <string name="message_hint_single">Message </string>
    <string name="message_group_contacts">Group members</string>
    <string name="message_snackbar_friend_muted">Friend muted</string>
    <string name="message_snackbar_group_muted">Group muted</string>

    <!-- Actions in message view -->
    <string name="action_undo">Undo</string>
    <string name="action_file_list">See files list</string>
    <string name="action_mute_conversation">Mute Conversation</string>
    <string name="action_delete_conversation">Delete Conversation</string>
    <string name="action_recall_message">Recall a message</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_rename_group">Rename Group</string>
    <string name="action_group_members">See Group Members</string>

    <!-- Attachments-->
    <string name="attachment">Attachment</string>
    <string name="attachment_image">Image from the gallery</string>
    <string name="attachment_camera">Take a picture</string>
    <string name="attachment_camera_movie">Make a movie</string>
    <string name="attachment_record_sound">Record a sound</string>
    <string name="attachment_location">Your location</string>

    <!-- Dialog -->
    <string name="dialog_adding_new_friends">Adding a new friend</string>
    <string name="dialog_edit_user_status">Edit your status</string>
    <string name="dialog_share">Share your Tox ID</string>
    <string name="dialog_delete_conversion">Delete conversation?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_qr_code">QR Code</string>
    <string name="dialog_android_share">Android Share</string>
    <string name="dialog_status_online">Online</string>
    <string name="dialog_status_away">Away</string>
    <string name="dialog_status_busy">Busy</string>
    <string name="dialog_delete_friend">Remove </string>
    <string name="dialog_delete_friend_end">from your friends list?</string>
    <string name="dialog_change_color">Change</string>
    <string name="dialog_change_color_end">color</string>
    <string name="dialog_leave_group">Leave the group</string>
    <string name="dialog_edit_group_name">Edit the group name</string>

    <!-- Profile -->
    <string name="profile_settings">Profile settings</string>
    <string name="profile_nickname">Change your nickname</string>
    <string name="profile_status_message">Change your status message</string>
    <string name="profile_status">Change your status</string>
    <string name="profile_reject_messages">Change reject with call messages</string>
    <string name="profile_information">Profile information</string>
    <string name="profile_tox_id">Tox ID</string>

    <!-- Call -->
    <string name="call_is_calling">is calling you</string>
    <string name="call_input_message">Message</string>
    <string name="call_reject_with_message">Reject with message</string>
    <string name="call_answer">ANSWER</string>
    <string name="call_decline">DECLINE</string>

    <!-- Other -->
    <string name="action_mode_selected_single">1 selected conversation</string>
    <string name="action_mode_selected_multi">selected conversations</string>
    <string name="files_send_title">Files sent by</string>

    <string name="sample_user_name">André Almeida</string>
    <string name="sample_status_message">Trying out the new Tox Android</string>
    <string name="sample_tox_id">AC1A8F21118958478C84BE0BA4F0AFA76D1923356269726449BDA8930214BA26FD89FDE7547E</string>

</resources>
